--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ Flask
 scikit-learn
 pdfminer.six
 python-docx
-sentence-transformers
-spacy
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+sentence-transformers==2.2.2
+
