requirements.txt changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ pdfminer.six>=20221105
 python-docx>=0.8.11
 sentence-transformers>=2.2.0
 spacy>=3.7.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+en-core-web-sm==3.8.0
 streamlit>=1.28.0
 PyPDF2==3.0.1
-numpy==1.24.3
+numpy>=1.26.0
+setuptools
+wheel
 pandas>=2.0.0
 requests==2.31.0
 python-dotenv==1.0.0
